--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,13 +26,13 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="https://twitter.com/DanielEscobarW" target="_blank">Twitter</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <a class="sidebar-nav-item" href="#">Categorías</a>
+    <span class="sidebar-nav-item">Etiquetas</span>
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: '%Y' }}. Derechos reservados.
     </p>
   </div>
 </div>
