--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 </div>
 
 <div class="related">
-  <h2>Publicaciones similares</h2>
+  <h2>Otras publicaciones</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
