--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
-
+<div class="fb-comments" data-href="https://blog.escobar.eu.org" data-width="100%" data-numposts="10"></div>
 <div class="related">
   <h2>Otras publicaciones</h2>
   <ul class="related-posts">
@@ -52,5 +52,3 @@ s.setAttribute('data-timestamp', +new Date());
   js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.9&appId=1436970043034518";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
-<div class="fb-comments" data-href="https://blog.escobar.eu.org" data-numposts="10"></div>
