--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   {{ content }}
 </div>
 <hr />
-<div class="fb-comments" data-href="{{ post.title }}" data-width="100%" data-numposts="8"></div>
+<div class="fb-comments" data-href="https://blog.escobar.eu.org/{{ post.title }}" data-width="100%" data-numposts="8"></div>
 <div class="related">
   <h2>Otras publicaciones</h2>
   <ul class="related-posts">
