--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,15 @@ layout: default
   {{ content }}
 </div>
 <hr />
-<div class="fb-comments" data-href="https://blog.escobar.eu.org/{{ post.title }}" data-width="100%" data-numposts="8"></div>
+
+<p id="post-meta">{{ tags_content }}</p>
+    {% if page.fbcomments %}
+      <hr/>
+      <h4>Comments</h4>
+<div class="fb-comments" data-href="https://blog.escobar.eu.org{{ page.url }}" data-width="100%" data-numposts="8"></div>
+    {% endif %}
+  </div>
+
 <div class="related">
   <h2>Otras publicaciones</h2>
   <ul class="related-posts">
