--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 </div>
 <hr />
 
-<div class="fb-comments" data-href="https://blog.escobar.eu.org{{ page.url }}" data-width="100%" data-numposts="8"></div>
+<div class="fb-comments" data-href="https://blog.escobar.eu.org{{ page.url }}" data-width="100%" data-numposts="8" data-order-by="reverse_time"></div>
 
 <div class="related">
   <h2>Otras publicaciones</h2>
